# avature_scraper

./: README.md  jobs.ndjson  main.py  pyproject.toml
input/: avature_sites.json
scraper/: cc_index_scan.py  dedupe.py  discover.py  endpoints.py  fetch.py  html_fallback.py  instant_search.py  normalize.py  parse_jobdetail.py
utils/: http.py
