[tool.poetry]
name = "avature-scraper"
version = "0.1.0"
description = "API-first scraper for Avature-hosted career sites"
authors = ["David Macartney dmacartney7@gmail.com"]
readme = "README.md"
packages = [{ include = "scraper" }, { include = "utils" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
